@@ -21,3 +21,5 @@ At the same time the following orthographies have been added: French, Spanish or
 
 2021-03-02 (no version change still v1.10)
 - Add modern south arabian languages: Mehri and Soqotri
+
+- Add support for German.
